===========================

*Release date: XX-June-2008*

Core and Builtins
-----------------

- Issue 2798: When parsing arguments with PyArg_ParseTuple, the "s" code now
  allows any unicode string and returns a utf-8 encoded buffer, just like the
  "s#" code already does.  The "z" code was corrected as well.

- Issue 2801: fix bug in the float.is_integer method where a ValueError
  was sometimes incorrectly raised.

- The --with-toolbox-glue option (and the associated pymactoolbox.h) have been
  removed.

- Issue #2196: hasattr now lets exceptions which do not inherit Exception
  (KeyboardInterrupt, and SystemExit) propagate instead of ignoring them

Extension Modules
-----------------

- Support for Windows9x has been removed from the winsound module.

Library
-------

- The statvfs module has been removed.

- #1713041: fix pprint's handling of maximum depth.

- #2250: Exceptions raised during evaluation of names in rlcompleter's
  ``Completer.complete()`` method are now caught and ignored.

- #2659: Added ``break_on_hyphens`` option to textwrap TextWrapper class.

- Issue #2487: change the semantics of math.ldexp(x, n) when n is too
  large to fit in a C long.  ldexp(x, n) now returns a zero (with
  suitable sign) if n is large and negative; previously, it raised
  OverflowError.

- The ConfigParser module has been renamed to configparser.

- Issue 2865: webbrowser.open() works again in a KDE environment.

- The multifile module has been removed.

- The SocketServer module has been renamed to socketserver.

- Fix the __all__ setting on 'collections' to include UserList and UserString.

- The sre module has been removed.

- The Queue module has been renamed to queue.

- The copy_reg module has been renamed to copyreg.

- The mhlib module has been removed.

- The ihooks module has been removed.

- The fpformat module has been removed.

- The dircache module has been removed.

- The Canvas module has been removed.
