@@ -812,9 +812,10 @@ LIBSUBDIRS=	lib-tk site-packages test test/output test/data \
 		test/decimaltestdata \
 		encodings \
 		email email/mime email/test email/test/data \
+		json json/tests \
 		sqlite3 sqlite3/test \
 		logging bsddb bsddb/test csv wsgiref \
-		lib2to3 lib2to3/fixes lib2to3/pgen2 \
+		lib2to3 lib2to3/fixes lib2to3/pgen2 lib2to3/tests \
 		ctypes ctypes/test ctypes/macholib idlelib idlelib/Icons \
 		distutils distutils/command distutils/tests $(XMLLIBSUBDIRS) \
 		setuptools setuptools/command setuptools/tests setuptools.egg-info \
